--- a/Reports/Dissertation/bibliography.bib
+++ b/Reports/Dissertation/bibliography.bib
@@ -1,3 +1,53 @@
+@book{nielsen1994usability,
+  title={Usability engineering},
+  author={Nielsen, Jakob},
+  year={1994},
+  publisher={Elsevier}
+}
+@misc{mills_2017, title={Window.localStorage}, url={https://developer.mozilla.org/en/docs/Web/API/Window/localStorage}, author={Mills, Chris David}, year={2017}, month={Mar}}
+
+
+@misc{mallone, title={CREATE A PAINT BUCKET TOOL IN HTML5 AND JAVASCRIPT}, url={http://www.williammalone.com/articles/html5-canvas-javascript-paint-bucket-tool/}, author={Mallone, William}}
+
+@misc{ kearney_2017, title={Measure Performance with the RAIL Model}, url={https://developers.google.com/web/fundamentals/performance/rail}, author={ Kearney, Meggin}, year={2017}, month={Apr}}
+
+@misc{2017, title={Browser statistics}, url={https://www.w3schools.com/browsers/}, author={W3Schools}, year={2017}, month={Mar}}
+
+@misc{hawksey_2014, title={Google Sheets as a Database – INSERT with Apps Script using POST/GET methods (with ajax example)}, url={https://mashe.hawksey.info/2014/07/google-sheets-as-a-database-insert-with-apps-script-using-postget-methods-with-ajax-example/}, author={Hawksey, Martin}, year={2014}, month={Jul}}
+
+
+@misc{blindman67,
+  author = {Spronck, Mark},
+  title = {FloodFill2D},
+  year = {2016},
+  publisher = {GitHub},
+  journal = {GitHub repository},
+  howpublished = {\url{https://github.com/blindman67/FloodFill2D}}
+}
+
+@misc{sheetrock,
+  author = {Zarate, Chris},
+  title = {Sheetrock.js},
+  year = {2015},
+  publisher = {GitHub},
+  journal = {GitHub repository},
+  howpublished = {\url{https://github.com/chriszarate/sheetrock}}
+}
+
+
+
+@article{rice2007assessing,
+  title={Assessing higher order thinking in video games},
+  author={Rice, John W},
+  journal={Journal of Technology and Teacher Education},
+  volume={15},
+  number={1},
+  pages={87},
+  year={2007},
+  publisher={Association for the Advancement of Computing in Education}
+}
+
+
 @book{Sommerville:2006:SE:1196763,
  author = {Sommerville, Ian},
  title = {Software Engineering: (Update) (8th Edition) (International Computer Science)},
